--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
