--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-papaparse": "^4.4.0",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5"
   },
