--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
