--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cypress": "^15.0.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
