--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cypress": "^15.0.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.544.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,6 +30,7 @@
     "react-papaparse": "^4.4.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5"
   },
