--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cypress": "^15.0.0",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-papaparse": "^4.4.0",
